enhance UI and fix bugs

--- a/About.cshtml
+++ b/About.cshtml
@@ -8,14 +8,12 @@
         <div class="col-lg-12">
             <div class="content">
                 <h1>@Page.Title</h1>
-                <h3>FriendlyZone</h3>
-                <h5>Cookies anyone?</h5>
+                <h3>Friendly Zone</h3>
+                <h5>Sign up now!</h5>
                 <hr>  
-                <h3>Authors</h3>
+                <h3>Author</h3>
                 <article>
-                    <p> William Gilbert Go, 300097271 </p>
-                    <p> Brandon Peters, 300105618</p>
-                    <p> Cameron Sweeney, 300096968</p>
+                    <p> William Gilbert Go</p>
                 </article>
             </div>
         </div>
