--- a/Admin/EditUser.cshtml
+++ b/Admin/EditUser.cshtml
@@ -37,22 +37,21 @@
 
 <!DOCTYPE html>
 
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-    </head>
-    <body>
-        <h1>Update Users</h1>
-        <form method="post" action=""> <!--use empty field if the same page will be procesing the form-->
-            <fieldset>
-                <legend>Update Users</legend>
-                <div>
-                    <label for="username">UserName</label>
-                    <input type="text" name="username" value="@UserName">
-                </div>
-                <input type="submit" value="Update User">
-            </fieldset>
-        </form>
-    </body>
-</html>
+<div id="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3 center">
+            <h1 style="padding-top: 90px;">Update Users</h1>
+            <hr><br> 
+            <form method="post" action=""> <!--use empty field if the same page will be procesing the form-->
+                <fieldset>
+                    <legend>Update Users</legend>
+                    <div>
+                        <label for="username">UserName</label>
+                        <input type="text" name="username" value="@UserName">
+                    </div>
+                    <input type="submit" value="Update User">
+                </fieldset>
+            </form>
+        </div>
+    </div>
+</div>
