--- a/Contact.cshtml
+++ b/Contact.cshtml
@@ -8,48 +8,30 @@
         <div class="col-lg-12">
             <div class="content">
                 <h1>@Page.Title</h1>
-                <h3>FriendlyZone</h3>
-                <h5>Cookies anyone?</h5>
+                <h3>Friendly Zone</h3>
+                <h5>Sign up now!</h5>
                 <hr>  
-            </div>
+                <header>
+                    <h3>Phone:</h3>
+                </header>
+                <p> 
+                    <span>(604) 832 3251</span>
+                </p> 
+                <header>
+                    <h3>Email:</h3>
+                </header>
+                <p> 
+                    <span><a href="mailto:williamgilbertgo@gmail.com">williamgilbertgo@gmail.com</a></span>
+                </p> 
+                <header>
+                    <h3>Address:</h3>
+                </header>
+                <p>
+                    6710 258 Street<br />
+                    Langley, BC V4W 1V3
+                </p>
+            </div> 
         </div>
     </div>
 </div>
- 
-<div class="message">
-    <header>
-        <h3>Phone:</h3>
-    </header>
-    <p>
-        <span class="label">Main:</span>
-        <span>(604) 832 3251</span>
-    </p> 
-</div>
-
-<div class="message">
-    <header>
-        <h3>Email:</h3>
-    </header>
-    <p>
-        <span class="label">William:</span>
-        <span><a href="mailto:williamgilbertgo@gmail.com">williamgilbertgo@gmail.com</a></span>
-    </p>
-    <p>
-        <span class="label">Cameron:</span>
-        <span><a href="mailto:cameron.p.sweeney@gmail.com">cameron.p.sweeney@gmail.com</a></span>
-    </p>
-    <p>
-        <span class="label">Brandon:</span>
-        <span><a href="mailto:bjpeters29@gmail.com">bjpeters29@gmail.com</a></span>
-    </p>
-</div>
-
-<div class="message">
-    <header>
-        <h3>Address:</h3>
-    </header>
-    <p>
-        6710 258 Street<br />
-        Langley, BC V4W 1V3
-    </p>
-</div>
+   
