--- a/Admin/DeleteMessage.cshtml
+++ b/Admin/DeleteMessage.cshtml
@@ -28,21 +28,19 @@
      }   
 }
 
-<!DOCTYPE html>
 
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-    </head>
-    <body>
-        <h1>Delete Message - Confirmation</h1>
-        
-        <form method="post" action="">
-            <p>Are you sure you want to delete the following Message? <br>
-                Name: <b>@row.Email </b>??? <br>
-            </p>
-            <p><input type="submit" value="Delete"></p>
-        </form>
-    </body>
-</html>
+
+<div id="container">
+   <div class="row">
+       <div class="col-md-6 col-md-offset-3 center"> 
+           <h1 style="padding-top:90px;">Delete Message - Confirmation</h1>
+           <hr><br>
+           <form method="post" action="">
+               <p>Are you sure you want to delete the following Message? <br>
+                    Name: <b>@row.Email </b>??? <br>
+               </p>
+               <p><input type="submit" value="Delete"></p>
+           </form>
+        </div>
+    </div>
+</div>
