--- a/Admin/DeleteUser.cshtml
+++ b/Admin/DeleteUser.cshtml
@@ -30,19 +30,18 @@
 
 <!DOCTYPE html>
 
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title></title>
-    </head>
-    <body>
-        <h1>Delete User - Confirmation</h1>
+ <div id="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3 center">
+            <h1 style="padding-top: 90px;">Delete User - Confirmation</h1>
+            <hr><br> 
+            <form method="post" action="">
+                <p>Are you sure you want to delete the following user? <br>
+                    Name: <b>@row.Email </b>??? <br>
+                </p>
+                <p><input type="submit" value="Delete"></p>
+            </form> 
+        </div>
+    </div>
+ </div>
         
-        <form method="post" action="">
-            <p>Are you sure you want to delete the following user? <br>
-                Name: <b>@row.Email </b>??? <br>
-            </p>
-            <p><input type="submit" value="Delete"></p>
-        </form>
-    </body>
-</html>
