--- a/Default.cshtml
+++ b/Default.cshtml
@@ -1,38 +1,36 @@
 ﻿@{
     Layout = "~/_MainLayout.cshtml";
-    Page.Title = "FriendlyZone";
+    Page.Title = "Friendly Zone";
 }
 
-<html>
-    <body id="index">
+ 
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="content">
-                        <h1>@Page.Title</h1>
+           <header class="jumbotron" id="index">
+               <div class="container">
+                        <h1 style="padding-top:40px;">Friendly Zone</h1> 
                         <i class="fa fa-users" style="font-size: 100px"></i>
-                        <h3>Sign up now!</h3>
+                        <br><br>
+                        @if (!WebSecurity.IsAuthenticated) {
+                            <p style="font-size: 20pt;" class="btn btn-success">
+                                <a style="color: black;" href="~/Account/Register">Sign up now!</a> 
+                            </p>
+                        }
+                         
                         <hr>
-                      <!-- <a href="~/Member" class="btn btn-default btn-lg"><i class="fa fa-users">
-                            <span style="color: black">Get Started!</span></i></a>  -->  
-                    </div>
+                        <br>
+                       <p>Members are requested to post according to the following guidlines:</p>   
+                        <ul>
+                            <li>
+                                <h4>Think Before Posting</h4>
+                            </li>
+                            <li>
+                                <h4>Use Appropriate Language</h4>
+                            </li>
+                            <li>
+                                <h4>Have Respect for Others</h4>
+                                <br><br>
+                        </ul>   
                 </div>
-            </div>
-        </div>
-        <div class="message">
-            <br>
-           <p>Members are requested to post according to the following guidlines:</p>
-            <ol>
-                <li>
-                    <h4>Think Before Posting</h4>
-                </li>
-                <li>
-                    <h4>Use Appropriate Language</h4>
-                </li>
-                <li>
-                    <h4>Have Respect for Others</h4>
-                    <br><br>
-            </ol>
+            </header>  
         </div> 
-    </body>
-</html>
+
