--- a/Error/NotFound.cshtml
+++ b/Error/NotFound.cshtml
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="content">
-                        <h1>ERROR 403: FORBIDDEN</h1>
+                        <h1>ERROR 404: NOT FOUND</h1>
                         <hr>
                         <i class="fa fa-users" style="font-size: 100px"></i>
                         <h3>Sorry, the request could not be completed.</h3> 
