--- a/styles/app.css
+++ b/styles/app.css
@@ -9,15 +9,15 @@ body, html {
     height: 100%;
     //font-family: "Lato";
     //font-family: 'Indie Flower', cursive;
-    color: black;
-   // color: #7ba7cc;
+    color: black; 
     font-family: 'Montserrat', sans-serif;     
 }
 
+
 h1 {
 	font-weight: 700;
-	font-size: 5em;
-}
+	font-size: 3em; 
+} 
 
  img.dp {
     height: 150px;
@@ -33,7 +33,12 @@ img.chart {
 
 /** DIV **/
 .content{
-	padding-top: 10%;
+	padding-top: 15%;
+	text-align: center; 
+} 
+
+.contents {
+	padding-top: 7%;
 	text-align: center; 
 } 
 
@@ -76,7 +81,7 @@ img.chart {
 .update-form {
     text-align: left;
     margin: 0 auto;
-    padding-left: 32%;
+    //padding-left: 20%;
 }
 
 .manage-form {
@@ -116,6 +121,7 @@ input {
     clear:both; 
     color: black;
     height: 30px; 
+    width: 230px;
 }
 
 label {
@@ -189,11 +195,7 @@ label {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
-.dropdown:hover .dropbtn {
-  //  background-color: #3e8e41;
-}
-
+ 
 
 /** TABLE **/
 .table-info {
@@ -237,7 +239,11 @@ label {
 
 #index {
     background-image: url('../images/friends.jpg');
+    width: 100%;
+    height: 100%;
     background-size: cover;
+    background-position: center;
+    text-align: center; 
 } 
 
 .second {
@@ -247,4 +253,14 @@ label {
 
 #logout {
     padding-top: 8px;
+}
+
+
+.short-button {
+    width: 70px;
+}
+
+
+.text-comment {
+  //  padding-top: 8%;
 }
